tests/language_modules/18_string_templates/valid/string_template_spaced_placeholder.vf
module StringTemplateSpacedPlaceholder

procedure main()
is
    let name: String = "Ada"
    let message: String = String.template("hello ${ }", name)
    check message = "hello Ada"
end main

end StringTemplateSpacedPlaceholder