tests/language_modules/18_string_templates/invalid_semantics/string_template_invalid_brace.vf
module StringTemplateInvalidBrace

procedure main()
is
    let message: String = String.template("id=${", 7)
    check message = "id=7"
end main

end StringTemplateInvalidBrace